tests/snapshots/bans_build__detects_build_script_mismatch.snap
---
source: tests/bans_build.rs
expression: diags
---
[
  {
    "fields": {
      "code": "checksum-mismatch",
      "graphs": [
        {
          "Krate": {
            "name": "ittapi-sys",
            "version": "0.3.3"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 4,
          "message": "expected checksum",
          "span": "00abcdefabcdefabcdefabcdefabcdefabcdefabcdefabcdefabcdefabcdef00"
        }
      ],
      "message": "file did not match the expected checksum",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/ittapi-sys-0.3.3/build.rs'",
        "error = 'calculated different checksum 474a3eb189a698475d8a6f4b358eb0790db6379aea8b8a85ac925102784cd520'"
      ],
      "severity": "warning"
    },
    "type": "diagnostic"
  }
]
