tests/snapshots/bans_build__detects_native_executables.snap
---
source: tests/bans_build.rs
expression: diags
---
[
  {
    "fields": {
      "code": "detected-executable",
      "graphs": [
        {
          "Krate": {
            "name": "prost-build",
            "version": "0.9.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "message": "detected executable",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/prost-build-0.9.0/third-party/protobuf/protoc-linux-aarch_64'",
        "executable-kind = 'elf'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "detected-executable",
      "graphs": [
        {
          "Krate": {
            "name": "prost-build",
            "version": "0.9.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "message": "detected executable",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/prost-build-0.9.0/third-party/protobuf/protoc-linux-x86_32'",
        "executable-kind = 'elf'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "detected-executable",
      "graphs": [
        {
          "Krate": {
            "name": "prost-build",
            "version": "0.9.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "message": "detected executable",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/prost-build-0.9.0/third-party/protobuf/protoc-linux-x86_64'",
        "executable-kind = 'elf'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "detected-executable",
      "graphs": [
        {
          "Krate": {
            "name": "prost-build",
            "version": "0.9.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "message": "detected executable",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/prost-build-0.9.0/third-party/protobuf/protoc-osx-aarch64'",
        "executable-kind = 'mach'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "detected-executable",
      "graphs": [
        {
          "Krate": {
            "name": "prost-build",
            "version": "0.9.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "message": "detected executable",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/prost-build-0.9.0/third-party/protobuf/protoc-osx-x86_64'",
        "executable-kind = 'mach'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "detected-executable",
      "graphs": [
        {
          "Krate": {
            "name": "prost-build",
            "version": "0.9.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "message": "detected executable",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/prost-build-0.9.0/third-party/protobuf/protoc-win32.exe'",
        "executable-kind = 'pe'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "detected-executable",
      "graphs": [
        {
          "Krate": {
            "name": "serde_derive",
            "version": "1.0.172"
          },
          "parents": [
            {
              "Krate": {
                "name": "serde",
                "version": "1.0.172"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "build-bans",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "message": "detected executable",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/serde_derive-1.0.172/serde_derive-x86_64-unknown-linux-gnu'",
        "executable-kind = 'elf'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
