tests/snapshots/bans_build__detects_scripts_by_user_extension.snap
---
source: tests/bans_build.rs
expression: diags
---
[
  {
    "fields": {
      "code": "disallowed-by-extension",
      "graphs": [
        {
          "Krate": {
            "name": "build-bans",
            "version": "0.1.0"
          }
        }
      ],
      "labels": [
        {
          "column": 22,
          "line": 3,
          "message": "",
          "span": "'cs'"
        }
      ],
      "message": "path disallowed by extension",
      "notes": [
        "path = '$crate/src/ohno.cs'"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
