tests/snapshots/bans_build__skips_matching_build_scripts.snap
---
source: tests/bans_build.rs
expression: diags
---
[
  {
    "fields": {
      "code": "checksum-match",
      "graphs": [
        {
          "Krate": {
            "name": "ittapi-sys",
            "version": "0.3.3"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 7,
          "message": "checksum",
          "span": "474a3eb189a698475d8a6f4b358eb0790db6379aea8b8a85ac925102784cd520"
        }
      ],
      "message": "file checksum matched",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/ittapi-sys-0.3.3/build.rs'"
      ],
      "severity": "help"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "checksum-match",
      "graphs": [
        {
          "Krate": {
            "name": "ring",
            "version": "0.16.20"
          },
          "parents": [
            {
              "Krate": {
                "name": "build-bans",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 11,
          "message": "checksum",
          "span": "1a850d791184374f614d01c86c8d6c9ba0500e64cb746edc9720ceaaa1cd8eaf"
        }
      ],
      "message": "file checksum matched",
      "notes": [
        "path = '$CARGO_HOME/registry/src/index.crates.io-1949cf8c6b5b557f/ring-0.16.20/build.rs'"
      ],
      "severity": "help"
    },
    "type": "diagnostic"
  }
]
